--- a/.github/workflows/laravel-git-clone.yml
+++ b/.github/workflows/laravel-git-clone.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Git Clone Project
-        run: git clone https://github.com/laravel/laravel.git backend
+      # - name: Git Clone Project
+      #   run: git clone https://github.com/laravel/laravel.git backend
 
       - name: Docker Version
         run: docker version
