github actionsが失敗するのを修正4

--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Composer Version
         run: docker-compose exec -T app composer --version
 
+      - name: Composer Install
+        run: docker-compose exec -T app composer install
+
       # - name: Create Laravel Project
       #   run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
 
