--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -43,13 +43,13 @@ jobs:
         run: docker-compose exec -T app php artisan --version
 
       - name: Laravel Migrate Testing
-        run: docker-compose exec -T app php artisan migrate
-
-      - name: Laravel Rollback Testing
-        run: docker-compose exec -T app php artisan migrate:refresh
+        run: docker-compose exec -T app php artisan migrate --force
 
       - name: Laravel Seeding Testing
-        run: docker-compose exec -T app php artisan db:seed
+        run: docker-compose exec -T app php artisan db:seed --force
+
+        - name: Laravel Rollback Testing
+        run: docker-compose exec -T app php artisan migrate:refresh --force
 
       - name: Laravel PHPUnit Testing
         run: docker-compose exec -T app php artisan test
